tests/sema/golden/28_call_impure_in_pure.out
tests/sema/bad/28_call_impure_in_pure.sg:2:28: error: calling impure function 'imp' in a pure context
  @pure fn f()->int { return imp(1); } // error: calling impure in pure
                             ^
